--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,20 @@ flutter:
       fonts:
         - asset: assets/fonts/ZonaPro-Bold.otf
         - asset: assets/fonts/ZonaPro-Thin.otf
+        
           # style: italic
+    - family: DM Sans
+      fonts:
+        - asset: assets/fonts/DMSans-Regular.ttf
+
+    - family: Archivo
+      fonts:
+        # - asset: assets/fonts/Archivo_Expanded-Regular.ttf
+        - asset: assets/fonts/Archivo-Black.ttf
+        - asset: assets/fonts/Archivo-Bold.ttf
+        - asset: assets/fonts/Archivo-Medium.ttf
+        - asset: assets/fonts/Archivo-Regular.ttf
+        - asset: assets/fonts/Archivo-Thin.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
